# optimisation

./: Doxyfile  Makefile.am  configure.ac  csv_parser.hpp
garch/: Makefile.am  a.out  constantestimation.hpp  constantmean.hpp  constantmeanvolmle.hpp  constantvariance.hpp  derivative.hpp  distributions.hpp  estimationengine.cpp  estimationengine.hpp  filter.hpp  garchpq.hpp  main.cpp  main.cpp~  meanprocess.hpp  normal.hpp  samplemean.hpp  samplevariance.hpp  statisticalfunctions.hpp  student.hpp  timeseries.cpp  timeseries.hpp  timeseriesmodel.cpp  timeseriesmodel.hpp  timeseriesmodel.hpp~  typedef.hpp  varianceprocess.hpp
optimisation/: armijo.hpp  bfgsmethod.hpp  errorhandling.hpp  fixedqueue.hpp  lbfgs.hpp  lbfgsmethod.hpp  newtonmethod.hpp  optimisation.sln  optimisation.vcxproj
sandbox/: Makefile.am  constantvariance.hpp  derivative.hpp  distribution.hpp  main.cpp  meanprocess.hpp  normal.hpp  timeseriesmodel.hpp  typedef.hpp  varianceprocess.hpp
src/: Makefile.am  derivative.hpp  main.cpp
test/: Makefile.am  SPY_100_5.csv  data.hpp  extendedrosenbrock.hpp  filter.hpp  powellsingular.hpp  rosenbrock.hpp  spx_data.cpp  test_bfgs.cpp  test_derivative.cpp  test_distribution.cpp  test_eigen_move_semantic.cpp  test_filter.cpp  test_fixedqueue.cpp  test_function.cpp  test_garch.cpp  test_lbfgs.cpp  test_newton.cpp  test_normal.cpp  test_parser.cpp  test_samplemodel.cpp  test_statisticalfunctions.cpp  test_timeseries.cpp  testgarch.cpp  testmain.cpp  testutility.hpp  trigonometric.hpp  wood.hpp
test/test/: test.vcxproj
