ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}
AM_CXXFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include -I$(top_srcdir)/lib @AM_CXXFLAGS@
#bin_PROGRAMS = hello
#hello_SOURCES = main.cpp

lib_LIBRARIES = libgarch.a

libgarch_adir = .

libgarch_a_HEADERS=\
constantmean.hpp \
constantvariance.hpp \
derivative.hpp \
distribution.hpp \
filter.hpp \
garchpq.hpp \
meanprocess.hpp \
normal.hpp \
samplemean.hpp \
samplevariance.hpp \
student.hpp \
timeseriesmodel.hpp \
typedef.hpp \
varianceprocess.hpp \
statisticalfunctions.hpp

libgarch_a_SOURCES = 